# bit7z-test

./: CMakeLists.txt  test.cpp  vcpkg.json
overlay/7zip/: CMakeLists.txt
